# Smart-Legal-Contracts

./: .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CONTRIBUTING.md  DATABASE_SETUP.md  DEMO_PRESENTATION.md  DEPENDENCY_AUDIT.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  Makefile  README.md  SECURITY_AUDIT.md  docker-compose.fullstack.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example_usage.py  federated_learning_example.py  requirements.txt  test_websocket.py  vercel.json
.github/workflows/: cd.yml  ci-test.yml  ci.yml  deploy.yml  playwright-tests.yml  quality-checks.yml  security.yml  test.yml
architecture/: overview.md
backend/: .dockerignore  .env  .env.example  .env.production  .vercelignore  API_TEST_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.dev  Dockerfile.locust  Dockerfile.test  FRONTEND_BACKEND_INTEGRATION_REPORT.md  INTEGRATION_FIXES_REPORT.md  PDF_PROCESSING_README.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_OPTIMIZATION_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SYSTEM_ARCHITECTURE.md  TASK_ASSIGNMENTS.md  alembic.ini  api_example.py  arbitration.db  arbitration_api_test_results_1755975667.json  arbitration_rag.db  basic_endpoint_test_results.json  demo.py  deploy.sh  deployment-checklist.md  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  dump.rdb  integration_rag.py  nginx.conf  pytest.ini  (+26 more)
backend/api/: index.py
backend/app/: __init__.py  graphql_main.py  main 2.py  main 3.py  main.py  versioning.py
backend/config/: __init__.py  languages.yaml  security.yaml
backend/data/: ml_training_data.csv  ml_training_data.json  negative_examples.json  positive_examples.json  training_data.csv  training_data.json  training_data.py
backend/data_lakehouse/: README.md  __init__.py  config.py  main.py  requirements.txt
backend/docs/: activity_log.md
backend/evaluation_results/: comprehensive_evaluation_report.json
backend/examples/: multilingual_detection_example.py
backend/go-optimizer/: README.md  go.mod  main.go
backend/migrations/: 001_initial_schema.sql  002_performance_optimizations.sql  migration_runner.py
backend/models/: feature_extractor.pkl  random_forest_model.pkl
backend/rag_system/: Dockerfile  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/rag_system/src/: __init__.py  cli.py
backend/rag_system/src/api/: __init__.py  main.py  models.py
backend/rag_system/src/comparison/: __init__.py  comparison_engine.py
backend/rag_system/src/core/: __init__.py  arbitration_detector.py
backend/rag_system/src/database/: __init__.py  schema.py
backend/rag_system/src/document/: __init__.py  section_detector.py
backend/rag_system/src/explainability/: __init__.py  explainer.py
backend/rag_system/src/models/: __init__.py  legal_bert_detector.py  pattern_matcher.py
backend/rag_system/tests/: __init__.py  test_detection.py
backend/rust-core/: Cargo.toml  README.md  build.rs
backend/rust-core/benches/: cache_bench.rs  indexing_bench.rs  parsing_bench.rs  pattern_matching_bench.rs
backend/rust-core/src/: cache.rs  concurrency.rs  crypto.rs  indexer.rs  lib.rs  parser.rs  pattern_matcher.rs  python_bindings.rs  wasm_modules.rs
backend/scripts/: init_db.py  validate_accuracy_thresholds.py
backend/tests/: __init__.py  conftest.py  test_accuracy_validation.py  test_advanced_rag.py  test_api.py  test_api_integration.py  test_arbitration_detector.py  test_benchmarks.py  test_document_processor.py  test_multilingual_system.py  test_performance_benchmarks.py  test_property_based.py  test_qdrant_vector_store.py  test_rag_pipeline.py  test_rag_unit.py  test_services_unit.py
backend/vector_db/: chroma.sqlite3
content/blog/: ai-transforming-arbitration.md
contracts/solidity/: ArbitrationRegistry.sol  ComplianceOracle.sol  ContractExecution.sol  DisputeResolution.sol  EscrowManager.sol  RoyaltyDistribution.sol
demo/: DEMO_SUMMARY.md  Dockerfile.demo  FINAL_DEMO.md  QUICK_START.md  README.md  app.py  demo-script.md  docker-compose.db.yml  docker-compose.yml  requirements-demo.txt  reset.sh  run-tests.sh  setup-and-run.sh  start-demo.sh  start.sh  status.sh  stop.sh  test-demo.py
demo/data/: sample_documents.py
demo/deploy/: .env.example  docker-compose.yml
demo/legal-tests/: README.md
demo/metrics/: requirements.txt
developer-portal/: README.md
docs/: DEPLOYMENT_GUIDE.md  ORCHESTRATION_SUMMARY.md  RAG Architecture for Legal Analysis  UI_UX_Enhancement_Summary.md  activity_log.md  demo_implementation_log.md  frontend_enhancement_log.md  go_optimizer_log.md  voice_accessibility_implementation.md
frontend/: .env.example  .env.production  .vercel-redeploy  DEPLOYMENT.md  Dockerfile  Dockerfile.cypress  Dockerfile.test  README-new.md  README.md  VERCEL_DEPLOYMENT_SUMMARY.md  cypress.config.ts  eslint.config.js  index.html  jest.config.js  next.config.js  next.config.mjs  package-lock.json  package-new.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel 2.json  vercel 3.json  vercel.json  vite.config.js  vite.config.ts
frontend 2/: .env.test  README 2.md  index.html  package-lock.json  playwright.config.ts  tailwind.config.ts
frontend-integration/: .env.example  api-service.ts
integrations/: Dockerfile  README.md  docker-compose.yml  pom.xml  zapier_integration.md
k8s/: celery-deployment.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  persistent-volumes.yaml  qdrant-deployment.yaml  secrets.yaml  service.yaml
mobile/: App.tsx  PROJECT_SUMMARY.md  README.md  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
monitoring/: grafana-dashboard.json  prometheus-docker.yml  prometheus.yml
scripts/: db-proxy.sh  generate_test_summary.sh
sdks/: README.md
whitelabel/: README.md  config.yaml  go.mod
(+856 files in other folders)
